# gpg-back

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: main.yml
app/: main.py
app/api/: api.py
app/api/v1/: auth.py  circular_edge.py  four_edge.py  health_check.py  three_edge.py  two_edge.py
app/auth/: cognito_auth.py  custom_cognito_token.py
app/schemas/: glass.py
app/services/binary_search/: binary_search.py
app/services/glass_calculator/: allowable_stress.py  allowablestress.py  calculator.py  contracts.py  glass_calculator.py  glass_layer.py  glass_material.py  material.py
app/services/glass_calculator/circular/: uniform.py
app/services/glass_calculator/contracts/: dataclasses.py  enums.py  interfaces.py
app/services/glass_calculator/fourside/: partial.py  uniform.py
app/services/glass_calculator/threeside/: uniform.py
app/services/glass_calculator/twoside/: uniform.py
tests/: test_binary_search.py  test_circular_uniform.py  test_four_side_partial.py  test_four_side_uniform.py  test_three_side_uniform.py  test_two_side_uniform.py
